<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LunchList!</string>
    <string name="app_name">LunchList</string>
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="type_label">Type:</string>
    <string name="take_out_label">Take-Out</string>
    <string name="sit_down_label">Sit-Down</string>
    <string name="delivery_label">Delivery</string>
    <string name="save_label">Save</string>
    <string name="row_icon_content_description">Row icon</string>
    <string name="notes_label">Notes:</string>
    <string name="lunchlist_empty">Click the MENU button to add a restaurant!</string>
    <string name="notes_hint">Notes</string>
    <string name="feed_hint">Feed URL</string>
    <string name="location_label">Location:</string>
    <string name="location_default">(not set)</string>
    <string name="alarm_message">It\'s time for lunch!</string>
    <string name="next_button_description">Next Button</string>
    <string name="empty">No restaurants!</string>

</resources>