<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<TableLayout
		android:id="@+id/details"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="1"
		android:shrinkColumns="1">
	
		<TableRow>
			<TextView android:text="@string/name_label" />
			
			<EditText
				android:id="@+id/name"
				android:inputType="text" />
		</TableRow>
	
		<TableRow>
			<TextView android:text="@string/address_label" />
			
			<EditText
				android:id="@+id/address"
				android:inputType="textPostalAddress" />
		</TableRow>
		
		<TableRow>
			<TextView android:text="@string/type_label" />
			
			<RadioGroup android:id="@+id/types" >
				<RadioButton
					android:id="@+id/take_out"
					android:checked="true"
					android:text="@string/take_out_label" />
				
				<RadioButton
					android:id="@+id/sit_down"
					android:text="@string/sit_down_label" />
				
				<RadioButton
					android:id="@+id/delivery"
					android:text="@string/delivery_label" />
			</RadioGroup>
		</TableRow>
		
		<TableRow>
		    <TextView android:text="@string/location_label" />
		    <TextView android:text="@string/location_default" android:id="@+id/location" />
		</TableRow>

		<EditText 
			android:id="@+id/notes"
			android:inputType="textMultiLine"
			android:singleLine="false"
			android:gravity="top"
			android:lines="2"
			android:scrollHorizontally="false"
			android:maxLines="2"
			android:hint="@string/notes_hint" />
		
		<EditText 
			android:id="@+id/feed"
			android:inputType="text"
			android:hint="@string/feed_hint" />
	</TableLayout>
</ScrollView>