<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/list_button"
            android:text="@string/list_button_label"
            android:layout_weight=".5"
  			android:layout_width="0dip"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/edit_button"
            android:text="@string/edit_button_label"
            android:layout_weight=".5"
  			android:layout_width="0dip"
            android:layout_height="wrap_content" />
        
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/restaurants"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

            <TableLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:shrinkColumns="1"
                android:stretchColumns="1" >

                <TableRow>

                    <TextView android:text="@string/name_label" />

                    <EditText
                        android:id="@+id/name"
                        android:inputType="text" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/address_label" />

                    <EditText
                        android:id="@+id/address"
                        android:inputType="textPostalAddress" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/type_label" />

                    <RadioGroup android:id="@+id/types" >

                        <RadioButton
                            android:id="@+id/take_out"
                            android:checked="true"
                            android:text="@string/take_out_label" />

                        <RadioButton
                            android:id="@+id/sit_down"
                            android:text="@string/sit_down_label" />

                        <RadioButton
                            android:id="@+id/delivery"
                            android:text="@string/delivery_label" />
                    </RadioGroup>
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingLeft="2dip"
                        android:text="@string/last_visit_label" />

                    <DatePicker android:id="@+id/last_visit" />
                </TableRow>

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_label" />
            </TableLayout>
    </ViewFlipper>
</LinearLayout>